test-expected/large/types/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: types
    foo.com/duversion: 3.9.2-20190923.1569257962410
    foo.com/version: 3.9.2
  labels:
    app.kubernetes.io/name: types
    helm.sh/chart: types-3.9.2
  name: types
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: types
  type: ClusterIP
